# django-rpyc

./: .gitignore  LICENSE  MANIFEST.in  requirements.txt  setup.cfg  setup.py
django_rpyc/: apps.py  decorators.py  server.py
django_rpyc/management/commands/: run_rpyc.py
tests/: test_decorators.py  test_server.py
