[metadata]
name = django-rpyc
author = Saba Gamgebeli
author_email = sabagamgebeli@gmail.com
maintainer = Saba Gamgebeli
LICENSE = MIT
keywords = django, rpyc, rpc, remote procedure call
description = Django RPyC is a simple Django app that provides a remote procedure call (RPC) interface using RPyC.

classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
